# boinc

./: CMakeLists.txt  config.cmake  config.h.in.cmake  version.cmake
api/: CMakeLists.txt
apps/: CMakeLists.txt
client/: CMakeLists.txt
clientgui/: CMakeLists.txt
clientscr/: CMakeLists.txt
cmake/: FindMySQL.cmake  svn_version.cmake
lib/: CMakeLists.txt
sched/: CMakeLists.txt
tools/: CMakeLists.txt
vda/: CMakeLists.txt
zip/: CMakeLists.txt
